Minor bug fixes completed on responsiveness on mobile

--- a/src/app/start-game/player-options/player-options.component.css
+++ b/src/app/start-game/player-options/player-options.component.css
@@ -31,28 +31,6 @@
   color: #f616d3;
 }
 
-.vertical-play-up {
-  margin-left: -4ch;
-  margin-top: -1.5ch;
-  margin-bottom: -3.5ch;
-}
-
-@media (min-width: 800px) {
-  .vertical-play-up {
-    margin-left: -1ch;
-    margin-top: -4ch;
-    margin-bottom: -4ch;
-  }
-}
-
-@media (min-width: 1750px) {
-  .vertical-play-up {
-    margin-left: -4ch;
-    margin-top: 0ch;
-    margin-bottom: -3ch;
-  }
-}
-
 .img-fluid {
   box-shadow: 0px 10px #888888;
   background-color: white;
